Fixed alt tags, on al pages, reformatted team section, grayscale team photos.

--- a/resources/html/extreme-weather.html
+++ b/resources/html/extreme-weather.html
@@ -60,7 +60,7 @@
                 <header>
                     <div class="background extreme-weather">
                         <div class="white circle large icon">
-                        <img src="images/icons/extreme-weather.svg" alt="Extreme Weather icon">
+                        <img src="images/icons/extreme-weather.svg" alt="Extreme weather icon">
                     </div>
                     </div>
                     
@@ -87,7 +87,7 @@
                                 </p>
                             </div>
                             <div class="col-md-4 text-center">
-                                <img class="p-4" src="images/icons/weather-forecasts-icon-round@2x.png" alt="Weather forecasts">
+                                <img class="p-4" src="images/icons/weather-forecasts-icon-round@2x.png" alt="Weather forecasts icon">
                             </div>
                         </div>
                         <div class="row features">
@@ -120,7 +120,7 @@
                         <div class="row my-5">
                             <div class="col-md-4 px-4 d-flex">
                                 <div class="prod p-4 my-3">
-                                    <img class="mb-3" src="images/icons/map-icon@2x.jpg" alt="web map icon">
+                                    <img class="mb-3" src="images/icons/map-icon@2x.jpg" alt="Web map icon">
                                     <p class="text-center">
                                         Web-map for optimizing location of weather stations across the state to improve situational awareness
                                     </p>
@@ -128,7 +128,7 @@
                             </div>
                             <div class="col-md-4 px-4 d-flex">
                                 <div class="prod p-4 my-3">
-                                    <img class="mb-3" src="images/icons/data-icon@2x.jpg" alt="data icon">
+                                    <img class="mb-3" src="images/icons/data-icon@2x.jpg" alt="Data icon">
                                     <p class="text-center">
                                         Data to assess benefits of upper-air profilers
                                     </p>
@@ -136,7 +136,7 @@
                             </div>
                             <div class="col-md-4 px-4 d-flex">
                                 <div class="prod p-4 my-3">
-                                    <img class="mb-3" src="images/icons/analysis-icon@2x.jpg" alt="analysis icon">
+                                    <img class="mb-3" src="images/icons/analysis-icon@2x.jpg" alt="Analysis icon">
                                     <p class="text-center">
                                         Historical analysis of fires to better understand extreme weather dynamics
                                     </p>
@@ -174,9 +174,12 @@
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/janice-cohen.jpg" alt="Janice Cohen">
                                     <h3 class="text-center">Janice Cohen, PhD</h3>
+                                    <p class="mb-1 text-center">
+                                        University of San Francisco and University Corporation for Atmospheric Research
+                                    </p>
                                     <div class="line yellow small line-center"></div>
-                                    <p>
-                                        University of San Francisco and University Corporation for Atmospheric Research. Lead of Workgroup #1 - Extreme Weather.
+                                    <p class="text-center">
+                                        Lead of Workgroup #1 - Extreme Weather
                                     </p>
                                 </div>
                             </div>
@@ -184,9 +187,12 @@
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/owen-doherty.jpg" alt="Owen Doherty">
                                     <h3 class="text-center">Owen Doherty, PhD</h3>
+                                    <p class="text-center">
+                                        Eagle Rock Analytics
+                                    </p>
                                     <div class="line yellow small line-center"></div>
-                                    <p>
-                                        Eagle Rock Analytics, Co-lead of Workgroup #1 - Extreme Weather.
+                                    <p class="mb-1 text-center">
+                                        Co-lead of Workgroup #1 - Extreme Weather
                                     </p>
                                 </div>
                             </div>
@@ -194,9 +200,12 @@
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/tami-lavezzo.jpg" alt="Tami Lavezzo">
                                     <h3 class="text-center">Tami Lavezzo</h3>
+                                    <p class="mb-1 text-center">
+                                        Sonoma Technologies
+                                    </p>
                                     <div class="line yellow small line-center"></div>
-                                    <p>
-                                        Sonoma Technologies, Upper Air Profiler Team
+                                    <p class="mb-1 text-center">
+                                        Upper Air Profiler Team
                                     </p>
                                 </div>
                             </div>
@@ -204,9 +213,12 @@
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/bryan-penfold.jpg" alt="Bryan Penfold">
                                     <h3 class="text-center">Bryan Penfold</h3>
+                                    <p class="mb-1 text-center">
+                                        Sonoma Technologies
+                                    </p>
                                     <div class="line yellow small line-center"></div>
-                                    <p>
-                                        Sonoma Technologies, Upper Air Profiler Team
+                                    <p class="mb-1 text-center">
+                                        Upper Air Profiler Team
                                     </p>
                                 </div>
                             </div>
@@ -214,9 +226,12 @@
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/shihming-huang.jpg" alt="ShihMing Huang">
                                     <h3 class="text-center">ShihMing Huang</h3>
+                                    <p class="mb-1 text-center">
+                                        Sonoma Technologies
+                                    </p>
                                     <div class="line yellow small line-center"></div>
-                                    <p>
-                                        Sonoma Technologies, Upper Air Profiler Team
+                                    <p class="mb-1 text-center">
+                                        Upper Air Profiler Team
                                     </p>
                                 </div>
                             </div>
@@ -224,9 +239,12 @@
                                 <div class="indv p-3">
                                     <img class="headshot mb-4" src="images/team/joe-scott.jpg" alt="Joe Scott">
                                     <h3 class="text-center">Joe Scott</h3>
+                                    <p class="mb-1 text-center">
+                                        Pyrologix
+                                    </p>
                                     <div class="line yellow small line-center"></div>
-                                    <p>
-                                        Pyrologix. Advisor
+                                    <p class="mb-1 text-center">
+                                        Advisor
                                     </p>
                                 </div>
                             </div>
