--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -90,7 +90,7 @@
                                         <div class="box-shadow">
                                             <div class="box extreme-weather">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/icons/extreme-weather.svg" alt="Extreme Weather icon">
+                                                    <img src="images/icons/extreme-weather.svg" alt="Extreme weather icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -110,7 +110,7 @@
                                         <div class="box-shadow">
                                             <div class="box wildfire-science">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/icons/fire-behavior.svg" alt="Fire Behavior icon">
+                                                    <img src="images/icons/fire-behavior.svg" alt="Fire behavior icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -135,7 +135,7 @@
                                         <div class="box-shadow">
                                             <div class="box forecasts">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/icons/forecast-tools.svg" alt="Forecast Tools icon">
+                                                    <img src="images/icons/forecast-tools.svg" alt="Forecast tools icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -154,7 +154,7 @@
                                         <div class="box-shadow">
                                             <div class="box scenarios">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/icons/scenario-analyses.svg" alt="Scenario Analyses icon">
+                                                    <img src="images/icons/scenario-analyses.svg" alt="Scenario analyses icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -203,7 +203,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/icons/extreme-weather.svg" alt="Extreme Weather icon">
+                                    <img src="images/icons/extreme-weather.svg" alt="Extreme weather icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -225,7 +225,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/icons/fire-behavior.svg" alt="Fire Behavior icon">
+                                    <img src="images/icons/fire-behavior.svg" alt="Fire behavior icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -247,7 +247,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/icons/forecast-tools.svg" alt="Forecast Tools icon">
+                                    <img src="images/icons/forecast-tools.svg" alt="Forecast tools icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -269,7 +269,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/icons/scenario-analyses.svg" alt="Scenario Analyses icon">
+                                    <img src="images/icons/scenario-analyses.svg" alt="Scenario analyses icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -315,7 +315,7 @@
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/berkeley.png" alt="berkeley logo">
+                                <img src="images/berkeley.png" alt="Berkeley logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
@@ -325,22 +325,22 @@
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/reax-enginering.jpg" alt="reax engineeering logo">
+                                <img src="images/reax-enginering.jpg" alt="Reax engineeering logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/university-of-california-merced.png" alt="university-of-california-merced logo">
+                                <img src="images/university-of-california-merced.png" alt="University of California Merced logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/scripps-logo.png" alt="scripps logo">
+                                <img src="images/scripps-logo.png" alt="Scripps logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/prometheus.jpg" alt="prometheus logo">
+                                <img src="images/prometheus.jpg" alt="Prometheus logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
@@ -350,32 +350,32 @@
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/university-of-san-francisco.png" alt="university-of-san-francisco logo">
+                                <img src="images/university-of-san-francisco.png" alt="University of San Francisco logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/university-of-california-santa-barbara.png" alt="universit-of-california-santa-barbara logo">
+                                <img src="images/university-of-california-santa-barbara.png" alt="University of California Santa Barbara logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/usfs-logo.png" alt="usfs logo">
+                                <img src="images/usfs-logo.png" alt="USFS logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/pyrologix.png" alt="pyrologix logo">
+                                <img src="images/pyrologix.png" alt="Pyrologix logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/eagle.jpg" alt="eagle logo">
+                                <img src="images/eagle.jpg" alt="Eagle logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/deer-creek-gis.png" alt="deer-creek-gis">
+                                <img src="images/deer-creek-gis.png" alt="Deer Creek GIS logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
@@ -390,7 +390,7 @@
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/lumen-logo.jpg" alt="lumen energy strategy Logo">
+                                <img src="images/lumen-logo.jpg" alt="Lumen Energy Strategy Logo">
                             </div>
                         </div>
                     </div>
@@ -400,7 +400,7 @@
                         <div class="row justify-content-center">
                             <div class="col-md-8">
                                 <div class="d-block text-center gpl mb-4">
-                                    <img src="images/gpl-logo.svg" alt="GPL Free Software">
+                                    <img src="images/gpl-logo.svg" alt="GPL free software logo">
                                 </div>
                                 <h3 class="text-white text-center mb-0">Everything open source because it’s good</h3>
                             </div>
