--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -120,7 +120,7 @@
                                                     Advancing research on fuel mapping and fire spread to inform next generation wildfire models
                                                 </p>
                                                 <div class="text-center readmore mt-auto">
-<!--                                                    <a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>-->
+                                                    <!—<a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>-->
                                                     <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
                                                 </div>
                                             </div>
